// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexagonIcon renders correctly, by default 1`] = `
<Svg
  height={16}
  preserveAspectRatio="xMidYMid meet"
  version="1.1"
  viewBox="0 0 110 110"
  width={16}
  xmlSpace="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <Path
    d="M48.9,103.3L16.2,84.4c-3.8-2.2-6.1-6.2-6.1-10.6V36c0-4.4,2.3-8.4,6.1-10.6L48.9,6.5 c3.8-2.2,8.4-2.2,12.2,0l32.7,18.9c3.8,2.2,6.1,6.2,6.1,10.6v37.8c0,4.4-2.3,8.4-6.1,10.6l-32.7,18.9 C57.3,105.4,52.7,105.4,48.9,103.3z"
    fill="#1a7bff"
  />
</Svg>
`;

exports[`HexagonIcon renders correctly, when modified 1`] = `
<Svg
  height={32}
  preserveAspectRatio="xMidYMid meet"
  version="1.1"
  viewBox="0 0 110 110"
  width={32}
  xmlSpace="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <Path
    d="M48.9,103.3L16.2,84.4c-3.8-2.2-6.1-6.2-6.1-10.6V36c0-4.4,2.3-8.4,6.1-10.6L48.9,6.5 c3.8-2.2,8.4-2.2,12.2,0l32.7,18.9c3.8,2.2,6.1,6.2,6.1,10.6v37.8c0,4.4-2.3,8.4-6.1,10.6l-32.7,18.9 C57.3,105.4,52.7,105.4,48.9,103.3z"
    fill="#fff"
  />
  <Text
    fill="#fff"
    fontSize={14}
    x={5}
    y={5}
  >
    Connect
  </Text>
</Svg>
`;
